k3s/gitea/manifests/gitea-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gitea-http
  namespace: gitea
  labels:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/component: service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: gitea
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-ssh
  namespace: gitea
  labels:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/component: service
spec:
  type: NodePort
  ports:
    - name: ssh
      port: 2222
      targetPort: 2222
      nodePort: 30022  # Accessible via any node on port 30022
      protocol: TCP
  selector:
    app.kubernetes.io/name: gitea
